--- a/boss.ini
+++ b/boss.ini
@@ -1,432 +1,132 @@
 ----- 일반보스 -----
-bossname = 폭동
+bossname = 일대각
 gentime = 03:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 폭서
+bossname = 일소연
 gentime = 03:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 폭남
+bossname = 일대연
 gentime = 03:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 폭북
+bossname = 일청석
 gentime = 03:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 흑룡
+bossname = 일백운
+gentime = 03:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 폭대각
+gentime = 03:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 폭소연
+gentime = 03:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 폭대연
+gentime = 03:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 폭청석
+gentime = 03:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 폭백운
+gentime = 03:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 일망천
 gentime = 04:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 진룡
+bossname = 일천문
 gentime = 04:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 묵룡
+bossname = 일백두
 gentime = 04:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 감룡
+bossname = 일녹명
 gentime = 04:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 3층폭동
-gentime = 03:00
+bossname = 폭망천
+gentime = 04:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 3층폭서
-gentime = 03:00
+bossname = 폭천문
+gentime = 04:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 3층폭남
-gentime = 03:00
+bossname = 폭백두
+gentime = 04:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 3층폭북
-gentime = 03:00
+bossname = 폭녹명
+gentime = 04:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 27
-gentime = 01:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 28
-gentime = 01:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 29
-gentime = 01:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 30
-gentime = 01:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 38
-gentime = 01:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 39
-gentime = 01:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 40
-gentime = 01:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 폭백향
-gentime = 00:30
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 백향
-gentime = 00:30
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 문려
-gentime = 00:30
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 폭문려
-gentime = 00:30
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 선녀
-gentime = 00:30
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 폭선녀
-gentime = 00:30
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 닌자
-gentime = 00:30
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 폭닌자
-gentime = 00:30
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 늑대
-gentime = 00:30
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 폭늑대
-gentime = 00:30
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 장군
-gentime = 00:30
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 폭장군
-gentime = 00:30
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 본성
-gentime = 00:30
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 폭본성
-gentime = 00:30
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 무
-gentime = 03:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 폭무
-gentime = 03:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 진
-gentime = 03:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 폭진
-gentime = 03:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 파괴
-gentime = 72:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 폭파괴
-gentime = 72:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 폭문위
-gentime = 00:30
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 문위
-gentime = 00:30
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 서장군
-gentime = 00:30
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 폭서장군
-gentime = 00:30
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 신수
-gentime = 22:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 문위1
-gentime = 00:30
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 폭문위1
-gentime = 00:30
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 하선녀1
-gentime = 00:30
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 하선녀9
-gentime = 00:30
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 폭하선녀1
-gentime = 00:30
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 폭하선녀9
-gentime = 00:30
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 7
-gentime = 01:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 8
-gentime = 01:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 9
-gentime = 01:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 17
-gentime = 01:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 18
-gentime = 01:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 19
-gentime = 01:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 20
-gentime = 01:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 공포
-gentime = 01:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 깊은
-gentime = 01:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 숲
-gentime = 01:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 본1
-gentime = 00:30
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 본4
-gentime = 00:30
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 본7
-gentime = 00:30
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 폭본1
-gentime = 00:30
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 폭본4
-gentime = 00:30
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 폭본7
-gentime = 00:30
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 남장군
-gentime = 00:30
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 폭남장군
-gentime = 00:30
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 폭해
+bossname = 일혈동
 gentime = 06:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 해
+bossname = 일귀문
 gentime = 06:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 폭청
+bossname = 폭혈동
 gentime = 06:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 청
+bossname = 폭귀문
 gentime = 06:00
 nogencheck = 0
-before_alert_ment = 입.니다
+before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
